# R3Code

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/r3_app/: Cargo.toml
crates/r3_app/src/: main.rs
crates/r3_core/: Cargo.toml
crates/r3_core/src/: attachments.rs  auth.rs  desktop.rs  effect_acp.rs  lib.rs  markdown.rs  observability.rs  orchestration.rs  package_surfaces.rs  persistence.rs  process.rs  rpc.rs  server.rs  shared.rs  telemetry.rs  text_generation.rs  workspace.rs
crates/r3_ui/: Cargo.toml
crates/r3_ui/src/: assets.rs  lib.rs  shell.rs  theme.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/reference/: EXACT_PORT_GOAL.md  PARITY_FILE_INVENTORY.md  PARITY_MATRIX.md  PARITY_PLAN.md  PORT_GAP_AUDIT.md  T3CODE_VERSION.md  UPSTREAM_REFERENCE.md
scripts/: capture-r3code-window.ps1  capture-t3code-browser.ps1  capture-t3code-reference.ps1  check-parity.ps1  compare-screenshots.ps1
