[workspace]
members = [
    "crates/r3_app",
    "crates/r3_core",
    "crates/r3_ui",
    "crates/xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/jasperdevs/R3Code"

[workspace.dependencies]
gpui = "0.2.2"
image = { version = "0.25.8", default-features = false, features = ["png"] }
